# Cache_Project

./: CMakeLists.txt  KHashLfuCache.h  KHashLruCaches.h  KHashLruCaches_Test.h  KICachePolicy.h  KLfuCache.h  KLfuCache_Test.h  KLruCache.h  KLruCache_Test.h  KLruKCache.h  KLruKCache_Test.h  LFUCache.h  LFUCahe.h  LRUCache.cpp  LRUCache.h  README.md  main.cpp  testAllCachePolicy.cpp
KArcCache/: KArcCache.h  KArcCacheNode.h  KArcLfuPart.h  KArcLruPart.h
